--- a/src/pages/Home/less/banner2.less
+++ b/src/pages/Home/less/banner2.less
@@ -70,6 +70,7 @@
     color: @template-text-color-light;
     width: 400px;
     text-align: left;
+    margin-top: 10%;
 
     .@{banner2}-title {
       font-size: 36px;
