--- a/src/pages/Home/less/feature6.less
+++ b/src/pages/Home/less/feature6.less
@@ -3,13 +3,12 @@
 .@{feature6} {
   &-wrapper {
     background: #242424;
-    // min-height: 720px;
     margin: 0 auto;
     overflow: hidden;
 
     &.home-page-wrapper {
       .home-page {
-        // padding-top: 40px;
+        padding-top: 40px;
       }
     }
   }
