feat: update home

--- a/src/pages/Home/less/feature7.less
+++ b/src/pages/Home/less/feature7.less
@@ -151,7 +151,7 @@
 
   .@{feature7}-title {
     &-text {
-      width: 110px;
+      width: 33%;
     }
 
     &-bar {
@@ -160,6 +160,12 @@
 
     &-wrapper {
       margin-bottom: 30px;
+    }
+  }
+
+  .@{feature7}-text {
+    .item {
+      width: 100%;
     }
   }
 
