--- a/src/pages/Plugin/less/feature13.less
+++ b/src/pages/Plugin/less/feature13.less
@@ -144,7 +144,6 @@
 
     &.home-page-wrapper {
       .home-page {
-        // padding: 56px 24px 64px;
         padding-top: 46px;
         padding-bottom: 46px;
       }
@@ -153,12 +152,9 @@
 
   .@{feature13}-title {
     &-text {
-      width: 110px;
+      width: 33%;
     }
 
-    &-bar {
-      width: 40%;
-    }
 
     &-wrapper {
       margin-bottom: 30px;
@@ -169,8 +165,10 @@
     font-size: 30px;
   }
 
-  .@{feature13} button {
-    display: none;
+  .@{feature13}-text {
+    .item {
+      width: 100%;
+    }
   }
 
   .@{feature13}-number-wrapper {
