feat: update website

--- a/src/pages/Download/less/banner10.less
+++ b/src/pages/Download/less/banner10.less
@@ -1,9 +1,17 @@
 @banner10: banner10;
 
+.banner10-wrap {
+  background: #05061A !important;
+  // display: flex;
+  // justify-content: center;
+}
+
 .@{banner10} {
   width: 100%;
+  // max-width: 1900px;
   position: relative;
-  background: #000;
+  background: url(/img/bg3.png) center no-repeat !important;
+  background-size: cover !important;
   height: 480px;
 
   .content {
