--- a/src/pages/Home/less/banner2.less
+++ b/src/pages/Home/less/banner2.less
@@ -34,7 +34,7 @@
   }
 
   .bg0 {
-    background: url("https://zos.alipayobjects.com/rmsportal/bXNBIyzSLHaycUGDzwLG.jpg") center no-repeat;
+    background: url("/img/home-bg.png") center no-repeat;
     background-size: cover;
     width: ~"calc(100% + 100px)";
     left: -50px;
@@ -98,14 +98,17 @@
       line-height: 36px;
     }
 
-    button {
+    .banner2-button {
       width: 240px;
       height: 60px;
       background: #263036;
-      border: none;
       font-size: 18px;
       font-weight: 500;
       color: #fff;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
     }
   }
   &-button {
