--- a/src/pages/Home/less/feature6.less
+++ b/src/pages/Home/less/feature6.less
@@ -106,15 +106,18 @@
   //   }
   // }
 
-  button {
+  .feature6-button {
     width: 240px;
     height: 60px;
     background: #5A00FF;
     border: none;
     font-size: 18px;
-    font-family: PingFangSC, PingFang SC;
     font-weight: 500;
     color: #fff;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
 
     &:hover {
       border: none;
