--- a/src/pages/Home/less/feature8.less
+++ b/src/pages/Home/less/feature8.less
@@ -73,7 +73,7 @@
       margin-top: 55px;
     }
 
-    button {
+    .btn1, .btn2 {
       width: 240px;
       height: 60px;
       background: #5A00FF;
@@ -84,7 +84,10 @@
       color: #fff;
       margin-top: 36px;
       margin-bottom: 130px;
-
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      cursor: pointer;
     }
     .btn1:hover {
       border: none;
