--- a/src/pages/Home/less/nav3.less
+++ b/src/pages/Home/less/nav3.less
@@ -8,6 +8,20 @@
   position: relative;
   top: 0;
 
+  &-button {
+    .nav-button {
+      margin-top: 10px;
+      background: #5A00FF;
+      width: 180px;
+      height: 42px;
+      font-size: 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+    }
+  }
+
   .home-page {
     padding: 0 60px;
   }
