--- a/src/pages/Product/less/banner1.less
+++ b/src/pages/Product/less/banner1.less
@@ -1,9 +1,14 @@
 @banner1: banner1;
 
+.banner1-wrap {
+  background: #01061C;
+}
+
 .@{banner1} {
   width: 100%;
   position: relative;
-  background: linear-gradient(90deg, #01061C 0%, rgba(90,0,255,0) 49%, #01061C 100%);
+  background: url(/img/bg2.png) center no-repeat !important;
+  background-size: cover !important;
   height: 480px;
 }
 
