feat: update website

--- a/src/pages/Home/less/feature6.less
+++ b/src/pages/Home/less/feature6.less
@@ -71,40 +71,11 @@
       }
     }
 
-    // &-bar {
-    //   height: 6px;
-    //   background: @primary-color;
-    //   width: 20%;
-    //   margin: auto;
-    //   display: block;
-    //   display: none;
-    //   &-wrapper {
-    //     position: relative;
-    //     margin-top: 8px;
-    //     transition: left .45s @ease-in-out;
-    //   }
-    // }
   }
 
   &-text {
     text-align: right;
   }
-  
-  // .ant-carousel {
-  //   .slick-dots-bottom {
-  //     bottom: -24px;
-  //   }
-
-  //   .slick-dots li {
-  //     button {
-  //       background: fade(@primary-color, 30);
-  //     }
-
-  //     &.slick-active button {
-  //       background: @primary-color;
-  //     }
-  //   }
-  // }
 
   .feature6-button {
     width: 240px;
@@ -156,8 +127,8 @@
     font-size: 30px;
   }
 
-  .@{feature6} button {
-    display: none;
+  .feature6-button {
+    display: none !important;
   }
 
   .@{feature6}-number-wrapper {
