--- a/src/pages/Home/less/feature8.less
+++ b/src/pages/Home/less/feature8.less
@@ -121,7 +121,7 @@
 
 
   .@{feature8}-text {
-    button {
+    .btn1, .btn2 {
       width: 150px;
       margin-top: 120px;
       margin-bottom: 0px;
