--- a/src/components/nav3/less/antMotionStyle.less
+++ b/src/components/nav3/less/antMotionStyle.less
@@ -1,5 +1,4 @@
 @import './common.less';
 @import './custom.less';
-@import './banner1.less';
 @import './content.less';
-@import './feature10.less';
+@import './nav3.less';
