--- a/src/components/nav3/less/nav3.less
+++ b/src/components/nav3/less/nav3.less
@@ -23,23 +23,14 @@
   }
 
   .home-page {
-    padding: 0 60px;
+    padding-left: 60px;
+    padding-right: 40px;
   }
 
   &-logo {
     display: inline-block;
-    position: relative;
-    width: 150px;
+    width: 64px;
     line-height: 64px;
-
-    & img {
-      vertical-align: middle;
-      display: inline-block;
-    }
-
-    & a {
-      display: block;
-    }
   }
 
   &-menu {
@@ -96,13 +87,11 @@
       &-title {
         font-size: 14px;
         color: @text-color;
-        // margin-left: 46px;
       }
 
       &-content {
         font-size: 12px;
         color: fade(@text-color, 75);
-        // margin-left: 46px;
       }
     }
   }
