feat: update some chore

--- a/src/pages/Home/less/content5.less
+++ b/src/pages/Home/less/content5.less
@@ -17,25 +17,24 @@
 					display: block;
 					// background: #fff;
 					// border-radius: 4px;
-					// padding: 10px;
 					text-align: center;
 					position: relative;
 					overflow: hidden;
 					.page-pro();
+					padding: 10px;
+					// width: 350px;
 					border: none;
-					color: @text-color;
 					transition: box-shadow 0.3s @ease-out, transform 0.3s @ease-out;
 					img {
-						height: 216px;
-						width: 384px;
-						// object-fit: contain;
+						// height: 216px;
+						width: 100%;
+						object-fit: contain;
 					}
 					.box {
 						text-align: left;
             padding-bottom: 36px;
 						.title {
 							margin-top: 20px;
-							height: 28px;
 							font-size: 20px;
 							font-weight: 500;
 							color: #000000;
@@ -43,7 +42,6 @@
 						}
 						.desc {
 							margin-top: 10px;
-							height: 24px;
 							font-size: 14px;
 							font-weight: 400;
 							color: #737373;
