feat: opti home page

--- a/src/components/footer1/less/footer1.less
+++ b/src/components/footer1/less/footer1.less
@@ -58,11 +58,23 @@
 			overflow: hidden;
 		}
 		.copyright {
-			height: 60px;
+			padding: 20px 0px;
 			text-align: center;
-			line-height: 60px;
 			color: #5a636d;
 			font-size: 18px;
+			.bei-an {
+				display: flex;
+				justify-content: center;
+				align-items: center;
+				cursor: pointer;
+				font-size: 16px;
+				a {
+					color: #939393;
+				}
+				img {
+					margin: 0 5px;
+				}
+			}
 		}
 	}
 }
