--- a/src/components/nav3/less/nav3.less
+++ b/src/components/nav3/less/nav3.less
@@ -20,6 +20,17 @@
       align-items: center;
       color: #fff;
     }
+    .nav-button-2 {
+      margin-top: 10px;
+      background: #263036;
+      width: 180px;
+      height: 42px;
+      font-size: 16px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      color: #fff;
+    }
   }
 
   .home-page {
