--- a/src/pages/Home/less/feature7.less
+++ b/src/pages/Home/less/feature7.less
@@ -1,6 +1,5 @@
 @feature7: feature7;
 
-
 .@{feature7} {
   &-wrapper {
     background: #F9F9FA;
@@ -59,11 +58,16 @@
 
   }
 
+  &-item {
+    min-height: 100px;
+  }
+
   &-text {
     .item {
       padding: 24px;
       background-color: #fff;
       margin-bottom: 24px;
+      width: 340px;
 
       .img {
         width: 72px;
