feat: opti home page

--- a/src/pages/Home/less/feature7.less
+++ b/src/pages/Home/less/feature7.less
@@ -68,6 +68,7 @@
       background-color: #fff;
       margin-bottom: 24px;
       width: 340px;
+      cursor: pointer;
 
       .img {
         width: 72px;
