--- a/src/pages/Home/less/antMotionStyle.less
+++ b/src/pages/Home/less/antMotionStyle.less
@@ -1,5 +1,6 @@
 @import './common.less';
 @import './custom.less';
+@import './banner1.less';
 @import './banner2.less';
 @import './content.less';
 @import './content4.less';
