feat: update website

--- a/src/pages/Download/less/feature12.less
+++ b/src/pages/Download/less/feature12.less
@@ -1,196 +1,197 @@
 @Feature12: Feature12;
 
-
 .@{Feature12} {
-  &-wrapper {
-    // min-height: 70vh;
-    margin: 0 auto;
-    overflow: hidden;
-    margin-top: -200px;
-    background: transparent;
+	&-wrapper {
+		// min-height: 70vh;
+		margin: 0 auto;
+		overflow: hidden;
+		margin-top: -200px;
+		background: transparent;
 
-    &.home-page-wrapper {
-      .home-page {
-        padding-top: 50px;
-        padding-bottom: 183px;
-      }
-    }
-  }
+		&.home-page-wrapper {
+			.home-page {
+				padding-top: 50px;
+				padding-bottom: 183px;
+			}
+		}
+	}
 
-  position: relative;
+	position: relative;
 
-  &-video-title {
-    margin: 0 auto;
-    background: #242424;
-    color: #fff;
+	&-video-title {
+		margin: 0 auto;
+		background: #242424;
+		color: #fff;
 
-    .left {
-      padding: 26px 20px 20px 20px;
-    }
+		.left {
+			padding: 26px 20px 20px 20px;
+		}
 
-    .left-title {
-      font-size: 30px;
-      font-weight: 500;
-      color: #FFFFFF;
-      line-height: 42px;
-    }
+		.left-title {
+			font-size: 30px;
+			font-weight: 500;
+			color: #ffffff;
+			line-height: 42px;
+		}
 
-    .left-title-sub {
-      width: 80px;
-      font-size: 20px;
-      font-weight: 500;
-      color: #FFFFFF;
-      line-height: 28px;
-    }
+		.left-title-sub {
+			width: 80px;
+			font-size: 20px;
+			font-weight: 500;
+			color: #ffffff;
+			line-height: 28px;
+		}
 
-    .bj {
-      margin-top: 14px;
-    }
+		.bj {
+			margin-top: 14px;
+		}
 
-    .dg {
-      margin-top: 36px;
-    }
+		.dg {
+			margin-top: 36px;
+		}
 
-    .left-desc {
-      font-size: 14px;
-      font-weight: 400;
-      color: #FFFFFF;
-      line-height: 24px;
-    }
-  }
+		.left-desc {
+			font-size: 14px;
+			font-weight: 400;
+			color: #ffffff;
+			line-height: 24px;
+		}
+	}
 
+	.title-h1 {
+		margin-top: 80px;
+		height: 50px;
+		font-size: 36px;
+		font-weight: 500;
+		color: #000000;
+		line-height: 50px;
+		text-align: center;
+	}
 
-  .title-h1 {
-    margin-top: 80px;
-    height: 50px;
-    font-size: 36px;
-    font-weight: 500;
-    color: #000000;
-    line-height: 50px;
-    text-align: center;
+	&-title {
+		display: inline-block;
 
-  }
+		&-wrapper {
+			text-align: center;
+		}
 
-  &-title {
-    display: inline-block;
+		&-text {
+			display: inline-flex;
+			align-items: center;
+			justify-content: center;
+			// width: 200px;
+			height: 48px;
+			// background: #FFFFFF;
+			// border-left: 1px solid #EBEBEB;
+			// margin-top: 5px;
+			margin-bottom: 36px;
 
-    &-wrapper {
-      text-align: center;
-    }
+			&:first-child {
+				border-left: none;
+			}
 
-    &-text {
-      display: inline-flex;
-      align-items: center;
-      justify-content: center;
-      // width: 200px;
-      height: 48px;
-      // background: #FFFFFF;
-      // border-left: 1px solid #EBEBEB;
-      // margin-top: 5px;
-      margin-bottom: 36px;
+			font-size: 18px;
+			color: #000000;
+			text-align: center;
+			cursor: pointer;
 
-      &:first-child {
-        border-left: none;
-      }
+			.sub-title {
+				height: 28px;
+				font-size: 20px;
+				font-weight: 400;
+				line-height: 28px;
+				// width: 200px;
+			}
+		}
+	}
 
-      font-size: 18px;
-      color: #000000;
-      text-align: center;
-      cursor: pointer;
+	&-text {
+		.item {
+			background: #f6f7f8;
+			margin-right: 24px;
+			width: 384px;
+			padding: 20px 20px 30px 20px;
+			margin-bottom: 30px;
+			position: relative;
 
-      .sub-title {
-        height: 28px;
-        font-size: 20px;
-        font-weight: 400;
-        line-height: 28px;
-        // width: 200px;
-      }
-    }
+			.item-wrap {
+				display: flex;
+				justify-content: space-between;
+			}
 
-  }
+			.iconfont {
+				font-size: 40px;
+				// position: absolute;
+				// right: 20px;
+				// top: 15px;
+			}
 
-  &-text {
-    .item {
-      background: #F6F7F8;
-      margin-right: 24px;
-      width: 384px;
-      padding: 20px 20px 30px 20px;
-      margin-bottom: 30px;
+			.title {
+				height: 30px;
+				font-size: 22px;
+				font-weight: 500;
+				color: #000000;
+				line-height: 30px;
+			}
 
-      .img {
-        margin-left: 133px;
-      }
-      
+			.sub-title {
+				height: 20px;
+				font-size: 14px;
+				font-weight: 400;
+				color: #595959;
+				line-height: 20px;
+			}
 
-      .title {
-        height: 30px;
-        font-size: 22px;
-        font-weight: 500;
-        color: #000000;
-        line-height: 30px;
+			button {
+				background: #5a00ff;
+				border: none;
+				margin-top: 20px;
+				width: 344px;
+				&:hover {
+					border: none;
+					background: #5a00ff;
+				}
+			}
 
-      }
-
-      .sub-title {
-        height: 20px;
-        font-size: 14px;
-        font-weight: 400;
-        color: #595959;
-        line-height: 20px;
-      }
-
-      button {
-        background: #5A00FF;
-        border: none;
-        margin-top: 20px;
-        width: 344px;
-        &:hover {
-          border: none;
-          background: #5A00FF;
-        }
-      }
-
-
-      .desc {
-        font-size: 14px;
-        font-weight: 400;
-        color: #737373;
-        line-height: 24px;
-      }
-    }
-  }
+			.desc {
+				font-size: 14px;
+				font-weight: 400;
+				color: #737373;
+				line-height: 24px;
+			}
+		}
+	}
 }
 
 @media screen and (max-width: 767px) {
-  .@{Feature12}-wrapper {
-    padding-bottom: 0;
-    min-height: 580px;
+	.@{Feature12}-wrapper {
+		padding-bottom: 0;
+		min-height: 580px;
 
-    &.home-page-wrapper {
-      .home-page {
-        padding: 56px 24px 64px;
-      }
-    }
-  }
+		&.home-page-wrapper {
+			.home-page {
+				padding: 56px 24px 64px;
+			}
+		}
+	}
 
-  .@{Feature12}-text {
-    .item {
-      .img {
-        margin-left: 90px;
-      }
-    }
-  }
+	.@{Feature12}-text {
+		.item {
+			.img {
+				margin-right: 40px;
+			}
+		}
+	}
 
+	.@{Feature12}-t1 {
+		font-size: 30px;
+	}
 
-  .@{Feature12}-t1 {
-    font-size: 30px;
-  }
+	.@{Feature12} button {
+		width: 300px !important;
+	}
 
-  .@{Feature12} button {
-    width: 300px !important;
-  }
-
-  .@{Feature12}-number-wrapper {
-    margin-bottom: 16px;
-  }
+	.@{Feature12}-number-wrapper {
+		margin-bottom: 16px;
+	}
 }
