--- a/src/pages/Plugin/less/feature13.less
+++ b/src/pages/Plugin/less/feature13.less
@@ -22,6 +22,7 @@
     font-size: 30px;
     font-weight: 500;
     line-height: 42px;
+    margin-bottom: 22px;
   }
 
   &-title {
@@ -57,12 +58,17 @@
     }
 
   }
+  &-item {
+    min-height: 100px;
+  }
 
   &-text {
     .item {
       padding: 24px;
       background-color: #fff;
       margin-bottom: 24px;
+      width: 340px;
+      cursor: pointer;
 
       .img {
         width: 72px;
@@ -144,8 +150,7 @@
 
     &.home-page-wrapper {
       .home-page {
-        padding-top: 46px;
-        padding-bottom: 46px;
+        padding: 56px 24px 64px;
       }
     }
   }
@@ -155,9 +160,19 @@
       width: 33%;
     }
 
+    &-bar {
+      width: 40%;
+    }
+
 
     &-wrapper {
       margin-bottom: 30px;
+    }
+  }
+
+  .@{feature13}-text {
+    .item {
+      width: 100%;
     }
   }
 
@@ -165,10 +180,8 @@
     font-size: 30px;
   }
 
-  .@{feature13}-text {
-    .item {
-      width: 100%;
-    }
+  .@{feature13} button {
+    display: none;
   }
 
   .@{feature13}-number-wrapper {
