--- a/src/pages/Home/less/feature4.less
+++ b/src/pages/Home/less/feature4.less
@@ -51,7 +51,20 @@
   .home-page {
     padding-bottom: 56px;
   }
-
+  .react-flow__node.annotation {
+    border-radius: 0;
+    text-align: left;
+    background: white;
+    border: none;
+    line-height: 1;
+    opacity: 0.5;
+    width: 100px;
+    box-shadow: 0 4px 6px -1px rgb(0 0 0 / 15%), 0 2px 4px -1px rgb(0 0 0 / 8%);
+  }
+  
+  .react-flow__node.annotation .react-flow__handle {
+    display: none;
+  }
   // .ant-carousel {
   //   .slick-dots-bottom {
   //     bottom: -24px;
