feat: update home

--- a/src/pages/Home/less/feature8.less
+++ b/src/pages/Home/less/feature8.less
@@ -60,6 +60,58 @@
   }
 
   &-text {
+    .item {
+      background: #f6f7f8;
+      margin-right: 24px;
+      width: 384px;
+      padding: 20px 20px 30px 20px;
+      margin-bottom: 30px;
+      position: relative;
+
+      .item-wrap {
+        display: flex;
+        justify-content: space-between;
+      }
+
+      .iconfont {
+        font-size: 40px;
+      }
+
+      .title {
+        height: 30px;
+        font-size: 22px;
+        font-weight: 500;
+        color: #000000;
+        line-height: 30px;
+      }
+
+      .sub-title {
+        height: 20px;
+        font-size: 14px;
+        font-weight: 400;
+        color: #595959;
+        line-height: 20px;
+      }
+
+      button {
+        background: #5a00ff;
+        border: none;
+        margin-top: 20px;
+        width: 344px;
+        &:hover {
+          border: none;
+          background: #5a00ff;
+        }
+      }
+
+      .desc {
+        font-size: 14px;
+        font-weight: 400;
+        color: #737373;
+        line-height: 24px;
+      }
+    }
+
     text-align: center;
 
     .desc {
@@ -86,7 +138,7 @@
       font-weight: 500;
       color: #fff;
       margin-top: 36px;
-      margin-bottom: 130px;
+      margin-bottom: 58px;
       display: flex;
       justify-content: center;
       align-items: center;
