--- a/src/pages/Home/less/feature8.less
+++ b/src/pages/Home/less/feature8.less
@@ -60,6 +60,7 @@
   }
 
   &-text {
+    padding-bottom: 131px !important;
     .item {
       background: #f6f7f8;
       margin-right: 24px;
@@ -117,12 +118,13 @@
     .desc {
       margin: 0 auto;
       width: 620px;
-      height: 108px;
+      // height: 108px;
       font-size: 18px;
       color: #000000;
       line-height: 36px;
       text-align: center;
       margin-top: 55px;
+      padding-bottom: 38px;
     }
 
     .btn1,
@@ -137,8 +139,7 @@
         PingFang SC;
       font-weight: 500;
       color: #fff;
-      margin-top: 36px;
-      margin-bottom: 58px;
+      // margin-bottom: 58px;
       display: flex;
       justify-content: center;
       align-items: center;
