--- a/src/pages/Download/less/feature12.less
+++ b/src/pages/Download/less/feature12.less
@@ -119,6 +119,11 @@
         justify-content: space-between;
       }
 
+      .img {
+        width: 48px;
+        height: 48px;
+      }
+
       .iconfont {
         font-size: 40px;
         // position: absolute;
