--- a/src/pages/Home/less/feature8.less
+++ b/src/pages/Home/less/feature8.less
@@ -74,6 +74,11 @@
         justify-content: space-between;
       }
 
+      .img {
+        width: 48px;
+        height: 48px;
+      }
+
       .iconfont {
         font-size: 40px;
       }
