--- a/src/pages/Home/less/feature4.less
+++ b/src/pages/Home/less/feature4.less
@@ -1,7 +1,7 @@
 @feature4: feature4;
 
 .@{feature4} {
-  background-color: lightgray;
+  background-color: #F9F9FA;
   .ant-tabs-left > .ant-tabs-content-holder {
     border-left: none;
   }
