feat: opti footer

--- a/src/components/footer1/less/footer1.less
+++ b/src/components/footer1/less/footer1.less
@@ -18,7 +18,7 @@
         line-height: 25px;
       }
     }
-    border-bottom: 1px solid #d8d8d8;
+    border-bottom: 1px solid rgba(216, 216, 216, 0.08);
   }
   .footer1 {
     .home-page {
@@ -37,6 +37,7 @@
       margin-bottom: 24px;
       font-size: 18px;
       color: #fff;
+      opacity: 0.5;
     }
     a {
       color: @template-footer-text-color;
