--- a/src/pages/Home/less/feature4.less
+++ b/src/pages/Home/less/feature4.less
@@ -5,7 +5,9 @@
   .ant-tabs-left > .ant-tabs-content-holder {
     border-left: none;
   }
-
+  .ant-card-bordered {
+    border: 1px solid black;
+  }
   .ant-tabs-card > .ant-tabs-nav .ant-tabs-tab,
   .ant-tabs-card > div > .ant-tabs-nav .ant-tabs-tab {
     border: none;
@@ -66,6 +68,29 @@
   .react-flow__node.annotation .react-flow__handle {
     display: none;
   }
+
+  .react-flow {
+    .ant-card {
+      border-radius: 10px;
+      // box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04)
+      box-shadow: 8px 8px 2px -1px rgb(0 0 0 / 100%), 0 2px 4px -1px rgb(0 0 0 / 8%);
+    }
+    .ant-tag-has-color {
+      color: black;
+      border: 1px solid black;
+    }
+    .ant-card-head {
+      border-radius: 10px 10px 0 0;
+      // color: #c217ec;
+      color:#6d1eff;
+      select {
+        border: none;
+        background: #f9f9fa;
+        color:#6d1eff;
+      }
+    }
+  }
+
   // .ant-carousel {
   //   .slick-dots-bottom {
   //     bottom: -24px;
