--- a/src/pages/Home/less/feature4.less
+++ b/src/pages/Home/less/feature4.less
@@ -71,15 +71,20 @@
 
   .react-flow {
     .ant-card {
+      background-color: #FAF9FB;
       border-radius: 10px;
       // box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04)
       box-shadow: 8px 8px 2px -1px rgb(0 0 0 / 100%), 0 2px 4px -1px rgb(0 0 0 / 8%);
+      p {
+        font-size: 10px;
+      }
     }
     .ant-tag-has-color {
       color: black;
       border: 1px solid black;
     }
     .ant-card-head {
+      background-color: white;
       border-radius: 10px 10px 0 0;
       // color: #c217ec;
       color:#6d1eff;
