--- a/src/components/nav3/less/nav3.less
+++ b/src/components/nav3/less/nav3.less
@@ -4,9 +4,8 @@
   background: #fff;
   width: 100%;
   z-index: 1;
-  box-shadow: 0 4px 6px fade(#000, 5);
-  position: relative;
-  top: 0;
+  max-width: 1920px;
+  margin: 0 auto;
 
   &-button {
     .nav-button {
