--- a/src/pages/Home/less/banner2.less
+++ b/src/pages/Home/less/banner2.less
@@ -2,10 +2,9 @@
 
 .@{banner2} {
   width: 100%;
-  height: ~'calc(100vh - 64px)';
+  height: 720px;
   position: relative;
-  border-color: #666;
-  background: #fff;
+  background: #fafafa;
 
   .banner-anim {
     height: 100%;
@@ -34,8 +33,11 @@
   }
 
   .bg0 {
-    background: url('/img/home-bg.png') center no-repeat;
-    background-size: cover;
+    background: url('/svg/banner-n.svg') center no-repeat;
+    // background: url('/svg/banner.svg') center no-repeat;
+    // background-size: contain;
+    // background-size: 100%;
+    // background-position: 50% 50%;
     width: ~'calc(100% + 100px)';
     left: -50px;
 
@@ -43,7 +45,10 @@
       width: 100%;
       height: 100%;
       content: '';
-      background: fade(#000, 35);
+      // background-coloyellow;yellow;
+      // z-index: 1;
+      // background-color: #fafafa;
+      // background: fade(#fafafa, 35);
       display: block;
     }
   }
@@ -93,8 +98,12 @@
       margin: 20px 0;
       font-size: 18px;
       font-weight: 400;
-      // color: #000;
-      color: #fff;
+      color: #5a636d;
+      font-size: 18px;
+      // width: 542px;
+      // height: 144px;
+      // font-weight: 400;
+      // color: #5a636d;
       line-height: 36px;
     }
 
