--- a/src/pages/Home/less/banner2.less
+++ b/src/pages/Home/less/banner2.less
@@ -2,7 +2,7 @@
 
 .@{banner2} {
   width: 100%;
-  height: 720px;
+  height: 630px;
   position: relative;
   background: #fafafa;
 
@@ -33,12 +33,15 @@
   }
 
   .bg0 {
-    background: url('/svg/banner-n.svg') center no-repeat;
+    background: url('/svg/banner.svg') right no-repeat;
+    // background: url('/svg/banner-n.svg') center no-repeat;
     // background: url('/svg/banner.svg') center no-repeat;
     // background-size: contain;
-    // background-size: 100%;
+    // background-size: 95%;
     // background-position: 50% 50%;
-    width: ~'calc(100% + 100px)';
+    // width: ~'calc(100% + 100px)';
+    // background: yellow;
+    width: 100%;
     left: -50px;
 
     &:before {
@@ -75,7 +78,8 @@
     color: @template-text-color-light;
     width: 400px;
     text-align: left;
-    margin-top: 10%;
+    // background-color: yellow;
+    margin-top: 20px;
 
     .@{banner2}-title {
       font-size: 36px;
@@ -144,6 +148,8 @@
 
 @media screen and (max-width: 414px) {
   .@{banner2} {
+    // height: 100%;
+    height: 500px;
     &-text-wrapper {
       width: 90%;
       left: 0;
@@ -151,7 +157,7 @@
       padding: 0;
       text-align: center;
       display: block;
-      margin-top: 20px;
+      // margin-top: 220px;
 
       .logo {
         width: 90%;
@@ -160,6 +166,16 @@
       .banner2-button {
         width: 150px;
       }
+      .banner2-version {
+        display: none;
+      }
+      .banner2-content {
+        // margin-top: 200px;
+        // display: none;
+      }
+    }
+    .bg0 {
+      display: none;
     }
   }
 }
