--- a/src/pages/Home/less/feature4.less
+++ b/src/pages/Home/less/feature4.less
@@ -30,6 +30,7 @@
     font-size: 30px;
     font-weight: 500;
     line-height: 42px;
+    text-align: center;
   }
 
   &-title {
@@ -39,6 +40,11 @@
       text-align: center;
       margin-bottom: 48px;
     }
+  }
+
+  .tab {
+    display: flex;
+    justify-content: center;
   }
 
   &-text {
