--- a/src/pages/Home/less/feature8.less
+++ b/src/pages/Home/less/feature8.less
@@ -61,6 +61,10 @@
 
   &-text {
     padding-bottom: 131px !important;
+    .img-box {
+      // border: 1px solid #000;
+      box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.2);
+    }
     .item {
       background: #f6f7f8;
       margin-right: 24px;
