--- a/src/components/nav3/less/nav3.less
+++ b/src/components/nav3/less/nav3.less
@@ -2,7 +2,8 @@
 
 .@{header3} {
   background: #fff;
-  width: 100%;
+  // width: 100%;
+  min-width: 1200px;
   z-index: 1;
   max-width: 1920px;
   margin: 0 auto;
@@ -11,7 +12,7 @@
     .nav-button {
       margin-top: 10px;
       background: #5a00ff;
-      width: 180px;
+      // width: 180px;
       height: 42px;
       font-size: 16px;
       display: flex;
@@ -22,7 +23,7 @@
     .nav-button-2 {
       margin-top: 10px;
       background: #263036;
-      width: 180px;
+      // width: 180px;
       height: 42px;
       font-size: 16px;
       display: flex;
