feat: add code copy

--- a/src/pages/Home/less/banner2.less
+++ b/src/pages/Home/less/banner2.less
@@ -95,6 +95,11 @@
       font-weight: 400;
       color: #0079ff;
       line-height: 25px;
+      .ant-typography code {
+        border: none;
+        margin: 0;
+        padding: 0;
+      }
     }
 
     & .@{banner2}-content {
