--- a/src/pages/Home/less/feature8.less
+++ b/src/pages/Home/less/feature8.less
@@ -184,11 +184,13 @@
   }
 
   .@{feature8}-text {
+    padding-bottom: 0 !important;
     .btn1,
     .btn2 {
       width: 150px;
-      margin-top: 120px;
-      margin-bottom: 0px;
+    }
+    .item {
+      margin-right: 0px;
     }
     .desc {
       margin: 0 auto;
