--- a/src/pages/Home/less/banner2.less
+++ b/src/pages/Home/less/banner2.less
@@ -34,24 +34,12 @@
 
   .bg0 {
     background: url('/svg/banner.svg') right no-repeat;
-    // background: url('/svg/banner-n.svg') center no-repeat;
-    // background: url('/svg/banner.svg') center no-repeat;
-    // background-size: contain;
-    // background-size: 95%;
-    // background-position: 50% 50%;
-    // width: ~'calc(100% + 100px)';
-    // background: yellow;
     width: 100%;
     left: -50px;
-
     &:before {
       width: 100%;
       height: 100%;
       content: '';
-      // background-coloyellow;yellow;
-      // z-index: 1;
-      // background-color: #fafafa;
-      // background: fade(#fafafa, 35);
       display: block;
     }
   }
@@ -78,7 +66,6 @@
     color: @template-text-color-light;
     width: 400px;
     text-align: left;
-    // background-color: yellow;
     margin-top: 20px;
 
     .@{banner2}-title {
@@ -154,7 +141,7 @@
 @media screen and (max-width: 414px) {
   .@{banner2} {
     // height: 100%;
-    height: 500px;
+    height: 600px;
     &-text-wrapper {
       width: 90%;
       left: 0;
@@ -162,7 +149,7 @@
       padding: 0;
       text-align: center;
       display: block;
-      // margin-top: 220px;
+      margin-top: 250px;
 
       .logo {
         width: 90%;
@@ -180,7 +167,17 @@
       }
     }
     .bg0 {
-      display: none;
+      left: 0;
+      margin-top: -150px;
+      // background: url('/svg/banner.svg') right no-repeat;
+      // width: 100%;
+      // top: 200px;
+      // &:before {
+      //   width: 100%;
+      //   height: 100%;
+      //   content: '';
+      //   display: block;
+      // }
     }
   }
 }
