feat: 下载页面移动端tab适配

--- a/src/pages/Download/less/feature12.less
+++ b/src/pages/Download/less/feature12.less
@@ -191,6 +191,12 @@
     }
   }
 
+  .@{Feature12}-title-text {
+    width: 130px;
+    margin-top: 120px;
+    background: #f6f7f8;
+  }
+
   .@{Feature12}-t1 {
     font-size: 30px;
   }
