--- a/src/pages/Product/less/feature11.less
+++ b/src/pages/Product/less/feature11.less
@@ -1,6 +1,9 @@
 @Feature11: Feature11;
 
 .@{Feature11} {
+  &-title-text {
+    display: none !important;
+  }
   &-wrapper {
     background: #f9f9fa;
     min-height: 360px;
