feat: change pnpm and format

--- a/src/pages/Doc/less/feature14.less
+++ b/src/pages/Doc/less/feature14.less
@@ -82,8 +82,8 @@
       justify-content: center;
       width: 200px;
       height: 48px;
-      background: #FFFFFF;
-      border-left: 1px solid #EBEBEB;
+      background: #ffffff;
+      border-left: 1px solid #ebebeb;
       margin-top: 5px;
       margin-bottom: 36px;
       &:first-child {
@@ -199,7 +199,6 @@
   .@{Feature14}-title-text {
     width: 85px;
     font-size: 14px;
-
   }
 
   .@{Feature14}-t1 {
