--- a/src/pages/Download/less/feature12.less
+++ b/src/pages/Download/less/feature12.less
@@ -81,8 +81,8 @@
       justify-content: center;
       width: 200px;
       height: 48px;
-      background: #FFFFFF;
-      border-left: 1px solid #EBEBEB;
+      background: #ffffff;
+      border-left: 1px solid #ebebeb;
       margin-top: 5px;
       margin-bottom: 36px;
 
