--- a/src/pages/Home/less/feature4.less
+++ b/src/pages/Home/less/feature4.less
@@ -1,7 +1,7 @@
 @feature4: feature4;
 
 .@{feature4} {
-  background-color: #F9F9FA;
+  background-color: #f9f9fa;
   .ant-tabs-left > .ant-tabs-content-holder {
     border-left: none;
   }
@@ -77,10 +77,12 @@
 
   .react-flow {
     .ant-card {
-      background-color: #FAF9FB;
+      background-color: #faf9fb;
       border-radius: 10px;
       // box-shadow: 0 20px 25px -5px rgba(0,0,0,0.1), 0 10px 10px -5px rgba(0,0,0,0.04)
-      box-shadow: 8px 8px 2px -1px rgb(0 0 0 / 100%), 0 2px 4px -1px rgb(0 0 0 / 8%);
+      box-shadow:
+        8px 8px 2px -1px rgb(0 0 0 / 100%),
+        0 2px 4px -1px rgb(0 0 0 / 8%);
       p {
         font-size: 10px;
       }
@@ -93,11 +95,11 @@
       background-color: white;
       border-radius: 10px 10px 0 0;
       // color: #c217ec;
-      color:#6d1eff;
+      color: #6d1eff;
       select {
         border: none;
         background: #f9f9fa;
-        color:#6d1eff;
+        color: #6d1eff;
       }
     }
   }
