--- a/src/components/nav/less/content.less
+++ b/src/components/nav/less/content.less
@@ -1,4 +1,5 @@
 @homepage: home-page;
+
 .@{homepage}-wrapper {
   width: 100%;
   position: relative;
@@ -22,11 +23,8 @@
   }
 }
 
-.@{homepage} {
-  // padding: 128px 24px;
-}
-
 @media screen and (max-width: 767px) {
+  // 针对屏幕宽度最大为767px的设备应用以下样式
   .@{homepage}-wrapper {
     .@{homepage} {
       padding: 56px 24px;
