--- a/src/pages/Home/less/content.less
+++ b/src/pages/Home/less/content.less
@@ -22,10 +22,7 @@
   }
 }
 
-.@{homepage} {
-  // padding: 128px 24px;
-}
-
+// 针对屏幕宽度最大为767px的设备应用以下样式
 @media screen and (max-width: 767px) {
   .@{homepage}-wrapper {
     .@{homepage} {
