--- a/src/pages/Home/less/banner2.less
+++ b/src/pages/Home/less/banner2.less
@@ -73,6 +73,7 @@
       font-weight: 500;
       color: #000000;
       line-height: 50px;
+      // margin-top: 10%;
     }
 
     & .@{banner2}-version {
@@ -96,10 +97,6 @@
       font-weight: 400;
       color: #5a636d;
       font-size: 18px;
-      // width: 542px;
-      // height: 144px;
-      // font-weight: 400;
-      // color: #5a636d;
       line-height: 36px;
     }
 
